# ProjetCDA

./: .doignore  .env.example  .gitignore  DEPLOYMENT.md  Dossier_Presentation_CDA.md  FRONTEND_DEPLOYMENT.md  README.md  card.rs  deck.rs  deck1.json  deck_test_1.json  deploy-frontend.ps1  deploy-full.ps1  deploy.ps1  do-app.yaml  docker-compose.yml  main.rs  package-lock.json  package.json  play_info.rs  player.rs  start.rs  tuto_mode.rs
.github/workflows/: ci.yml  deploy-digitalocean.yml
RANDOMI/: backend  frontend  game.js  index.html  package-lock.json  package.json
Randomi_Go_Test1/: Randomi_Go_Test1.sln
Randomi_Go_Test1/Randomi_Go_Test1/: ActionManager.cs  App.xaml  App.xaml.cs  Cards.cs  Deck.cs  GameManager.cs  MainWindow.xaml  MainWindow.xaml.cs
assets/: cards.json  deck1.json
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-db  Dockerfile.db  Dockerfile.dev  TESTS_README.md  diesel.toml  docker-compose.yml  run_all_tests.ps1  run_integration_tests.ps1
backend/assets/: cards.json
backend/migrations/2025-02-13-084158_accounts_friends_stats/: down.sql  up.sql
backend/migrations/2025-07-10-094130_password_reset/: up.sql
backend/postgres_test_workspace/: Cargo.toml
backend/postgres_test_workspace/src/: main.rs
backend/scripts/: run-diesel-migrations.sh
backend/src/: auth.rs  backend_db.rs  database.rs  docs.rs  dto.rs  email.rs  game_manager.rs  lib.rs  main.rs  mod.rs  presence.rs  routes.rs  server.rs  utils.rs
backend/src/database/: actions.rs  mod.rs  models.rs  schema.rs
backend/src/email/: mailer.rs
backend/src/routes/: account.rs  auth.rs  cards.rs  friends.rs  game.rs  mod.rs  settings.rs  sse.rs  stats.rs
backend/src/server/: dto.rs  game.rs  handler.rs  mod.rs  server.rs
backend/src/server/dto/: actions.rs  mod.rs  responses.rs
backend/src/server/game/: buffs.rs  card.rs  card_info.rs  cards.rs  database.rs  eval.rs  game.rs  game_logic.rs  mod.rs  modifiers.rs  play_info.rs  player.rs  special_cards.rs
backend/src/server/game/cards/: card.rs  exchange_card.rs  multi_action_card.rs  multi_hit_card.rs  pearth_card.rs  players_rolls_dice_card.rs  target_both_card.rs
backend/src/utils/: clamp.rs  limited_string.rs  mod.rs
backend/tests/: README.md  api.rs  api_integration.rs  authenticated_routes_test.rs  error_handling_test.rs  isolated_postgres_test.rs  postgres_basic_test.rs  real_integration_test.rs  real_routes_test.rs  simple_integration_test.rs  simple_test.rs  standalone_integration_test.rs  standalone_test.rs  working_test.rs
data/: cards.json
docs/: README.md
frontend/: .dockerignore  Dockerfile  babel.config.js  docker-compose.yml  index.html  jest.config.js  jsconfig.json  login.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/.do/: app.yaml
frontend/src/: collection.html  example-menu.html  forgot-password.html  index.html  ingame.html  login.js  (+5 more)
gameengine/: Cargo.toml
gameserver/: Cargo.toml
gameserver/src/: actions.rs  api.rs  handler.rs  main.rs  server.rs
gameserver/src/dto/: actions.rs  responses.rs
gameserver/src/game/: engine.rs
gameserver/static/: index.html
workflows/: ci.yml
(+65 files in other folders)
