[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
jsonwebtoken = "8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.14"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15"
