[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3.0"
actix-web-lab = "0.23.0"
actix-files = "0.6.6"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# for password hashing
bcrypt = "0.15"

# for JWT tokens
jsonwebtoken = "8.1"
actix-service = "2.0.3"
futures = "0.3.31"
actix-cors = "0.7.1"
tokio = { version = "1.45.1", features = ["full"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9.1"
futures-util = { version = "0.3", default-features = false }

log = "0.4.27"
env_logger = "0.11.8"
uid = "0.1.8"
tokio-stream = "0.1.17"
parking_lot = "0.12.4"

lettre = "0.11"
nanoid = "0.4.0"

# api doc
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "time", "openapi_extensions"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
actix-files = "0.6.6"
polodb_core = "5.1.4"
