actix-web = "4"
[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
# actix-web-actors = "4"
actix-ws = "0.3.0"

actix-files = "0.6.6"

# futures = "0.3.28"
futures-util = { version = "0.3", default-features = false }
rand = "0.9.1"
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
